--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Gibber is a social media blogging site without the restrictions or clutter of mainstream sites like Twitter and FaceBook"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Gibber</title>
+    <title>Gibber | Say What You Feel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
